--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,22 @@
         <button type="button" class="calculator__btn">7</button>
         <button type="button" class="calculator__btn">8</button>
         <button type="button" class="calculator__btn">9</button>
-        <button type="button" class="calculator__btn calculator__btn_operator">&#247;</button>
+        <button type="button" class="calculator__btn-operator" id="divisionBtn">/</button>
 
         <button type="button" class="calculator__btn">4</button>
         <button type="button" class="calculator__btn">5</button>
         <button type="button" class="calculator__btn">6</button>
-        <button type="button" class="calculator__btn calculator__btn_operator">-</button>
+        <button type="button" class="calculator__btn-operator" id="minusBtn">-</button>
 
         <button type="button" class="calculator__btn">1</button>
         <button type="button" class="calculator__btn">2</button>
         <button type="button" class="calculator__btn">3</button>
-        <button type="button" class="calculator__btn calculator__btn_operator">+</button>
+        <button type="button" class="calculator__btn-operator" id="additionBtn">+</button>
         
-        <button type="button" class="calculator__btn calculator__btn_reset" id="resetBtn">C</button>
-        <button type="button" class="calculator__btn calculator__btn_equal" id="equalBtn">=</button>
+        <button type="button" class="calculator__btn-clear" id="clearBtn">C</button>
+        <button type="button" class="calculator__btn-equal" id="equalBtn">=</button>
         <button type="button" class="calculator__btn">0</button>
-        <button type="button" class="calculator__btn calculator__btn_operator">&#215;</button>
+        <button type="button" class="calculator__btn-operator" id="multiBtn">x</button>
         
     </article>
 
